--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -15,7 +15,7 @@
 
 eureka:
     client:
-        enabled: true
+        enabled: false
     instance:
         appname: athleticspot
         instanceId: athleticspot:${spring.application.instance-id:${random.value}}
