--- a/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/config/bootstrap.yml
@@ -22,7 +22,8 @@ spring:
             # name of the config server's property source (file.yml) that we want to use
             name: athleticspot
             profile: dev # profile(s) of the property source
-            label: master # toggle to switch to a different version of the configuration as stored in git
+            label: master
+            enabled: false # toggle to switch to a different version of the configuration as stored in git
             # it can be set to any label, branch or commit of the config source git repository
 
 info:
