--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
     "node_modules"
   ],
   "dependencies": {
+    "@angular/animations": "4.1.3",
+    "@angular/cdk": "2.0.0-beta.11",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
     "@angular/core": "4.1.3",
     "@angular/forms": "4.1.3",
     "@angular/http": "4.1.3",
+    "@angular/material": "2.0.0-beta.11",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/router": "4.1.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
+    "@types/jquery": "^3.2.13",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "ng-jhipster": "0.2.6",
+    "ng2-datepicker": "2.1.2",
+    "ng2-datetime": "^1.4.0",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
     "ngx-infinite-scroll": "0.4.1",
