--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "4.1.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
     "@types/jquery": "^3.2.13",
+    "angular2-time-duration-picker": "^1.1.0",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
