--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
   ],
   "dependencies": {
     "@angular/animations": "4.1.3",
-    "@angular/cdk": "2.0.0-beta.11",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
     "@angular/core": "4.1.3",
     "@angular/forms": "4.1.3",
     "@angular/http": "4.1.3",
-    "@angular/material": "2.0.0-beta.11",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/router": "4.1.3",
@@ -28,6 +26,7 @@
     "ng-jhipster": "0.2.6",
     "ng2-datepicker": "2.1.2",
     "ng2-datetime": "^1.4.0",
+    "ng2-material-dropdown": "^0.7.10",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
     "ngx-infinite-scroll": "0.4.1",
