--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
+    "moment": "^2.20.1",
     "ng-jhipster": "0.2.6",
     "ng2-datepicker": "2.1.2",
     "ng2-datetime": "^1.4.0",
