--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>web</artifactId>
+    <packaging>war</packaging>
 
     <properties>
         <argLine>-Djava.security.egd=file:/dev/./urandom -Xmx256m</argLine>
@@ -116,6 +117,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.athleticspot</groupId>
+            <artifactId>tracker</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>io.github.jhipster</groupId>
             <artifactId>jhipster</artifactId>
