--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -26,8 +26,13 @@
             <version>1.0.3</version>
         </dependency>
         <dependency>
-            <groupId>com.strava</groupId>
-            <artifactId></artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jcs</artifactId>
+            <version>2.0-beta-1</version>
         </dependency>
     </dependencies>
 </project>
