--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.athleticspot</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
