--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -61,5 +61,11 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.danshannon</groupId>
+            <artifactId>javastrava-test</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 </project>
