--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -68,5 +68,12 @@
             <artifactId>javastrava-test</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test</artifactId>
+            <version>2.21.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
