--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -68,6 +68,18 @@
             <artifactId>javastrava-test</artifactId>
             <version>2.0.0</version>
         </dependency>
+
+        <!--Camel dependencies-->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-spring-boot-starter</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-quartz2</artifactId>
+            <version>2.21.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-test</artifactId>
