--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,7 @@
     "ng2-material-dropdown": "^0.7.10",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
-    "ngx-infinite-scroll": "0.4.1",
+    "ngx-infinite-scroll": "^0.4.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.0",
     "swagger-ui": "2.2.10",
