--- a/web/src/main/resources/config/application-prod.yml
+++ b/web/src/main/resources/config/application-prod.yml
@@ -39,8 +39,8 @@ spring:
                 prepStmtCacheSqlLimit: 2048
                 useServerPrepStmts: true
     jpa:
-        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-        database: MYSQL
+        database-platform: org.hibernate.dialect.PostgreSQLDialect
+        database: postgresql
         show-sql: false
         properties:
             hibernate.id.new_generator_mappings: true
