--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "4.1.3",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
