--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -81,6 +81,10 @@
             <version>2.21.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 </project>
