--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>HikariCP</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-neo4j</artifactId>
+        </dependency>
 
         <!--Camel dependencies-->
         <dependency>
