--- a/web/pom.xml
+++ b/web/pom.xml
@@ -744,6 +744,10 @@
                     <groupId>com.h2database</groupId>
                     <artifactId>h2</artifactId>
                 </dependency>
+                <dependency>
+                    <groupId>org.springframework.data</groupId>
+                    <artifactId>spring-data-neo4j</artifactId>
+                </dependency>
             </dependencies>
             <build>
                 <plugins>
