--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -115,4 +115,16 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.data</groupId>
+                    <artifactId>spring-data-neo4j</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
