--- a/web/src/main/resources/config/application-prod.yml
+++ b/web/src/main/resources/config/application-prod.yml
@@ -19,17 +19,17 @@ spring:
             enabled: false
         livereload:
             enabled: false
-    datasource:
-        type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/athleticspot?useUnicode=true&characterEncoding=utf8&useSSL=false
-        username: root
-        password:
-        hikari:
-            data-source-properties:
-                cachePrepStmts: true
-                prepStmtCacheSize: 250
-                prepStmtCacheSqlLimit: 2048
-                useServerPrepStmts: true
+#    datasource:
+#        type: com.zaxxer.hikari.HikariDataSource
+#        url: jdbc:mysql://localhost:3306/athleticspot?useUnicode=true&characterEncoding=utf8&useSSL=false
+#        username: root
+#        password:
+#        hikari:
+#            data-source-properties:
+#                cachePrepStmts: true
+#                prepStmtCacheSize: 250
+#                prepStmtCacheSqlLimit: 2048
+#                useServerPrepStmts: true
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         database: postgresql
