sport activity read controller clean up

--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -106,6 +106,16 @@
             <version>3.1.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.measure</groupId>
+            <artifactId>unit-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>tec.units</groupId>
+            <artifactId>unit-ri</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
 
     <profiles>
