--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>com.github.danshannon</groupId>
             <artifactId>javastrava-api</artifactId>
-            <version>1.0.3</version>
+            <version>2.0.0-alpha</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.logging.log4j</groupId>
@@ -47,6 +47,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
