--- a/web/src/main/resources/config/application-heroku.yml
+++ b/web/src/main/resources/config/application-heroku.yml
@@ -26,3 +26,6 @@ spring:
     sendgrid:
         api-key: ${SENDGRID_API_KEY}
 
+mailgun:
+    api-key: ${MAILGUN_API_KEY}
+    domain: ${MAILGUN_DOMAIN}
