--- a/app.json
+++ b/app.json
@@ -1,20 +1,6 @@
 {
-  "name": "athleticspot",
-  "scripts": {
-  },
-  "env": {
-  },
-  "formation": {
-    "web": {
-      "quantity": 1
-    }
-  },
-  "addons": [
-    "heroku-postgresql"
-  ],
-  "buildpacks": [
-    {
-      "url": "heroku/jvm"
-    }
-  ]
+    "name": "Spring Boot Heroku Demo",
+    "description": "This is a small demo application for showing how to run a Spring Boot application on Heroku.",
+    "repository": "https://github.com/athleticspot/athleticspot",
+    "image": "heroku/java"
 }
