--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Project Specific
 ######################
 /target/www/**
+/tracker/target/**
+/web/target/**
 /src/test/javascript/coverage/
 /src/test/javascript/PhantomJS*/
 
