git ignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,7 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+/tracker/target/
+/common/target/
+/common/target/
+/tracker/target/
