--- a/web/pom.xml
+++ b/web/pom.xml
@@ -730,16 +730,16 @@
                                     <arguments>install</arguments>
                                 </configuration>
                             </execution>
-                            <execution>
-                                <id>webpack build test</id>
-                                <goals>
-                                    <goal>yarn</goal>
-                                </goals>
-                                <phase>test</phase>
-                                <configuration>
-                                    <arguments>run webpack:test</arguments>
-                                </configuration>
-                            </execution>
+<!--                            <execution>-->
+<!--                                <id>webpack build test</id>-->
+<!--                                <goals>-->
+<!--                                    <goal>yarn</goal>-->
+<!--                                </goals>-->
+<!--                                <phase>test</phase>-->
+<!--                                <configuration>-->
+<!--                                    <arguments>run webpack:test</arguments>-->
+<!--                                </configuration>-->
+<!--                            </execution>-->
                             <execution>
                                 <id>webpack build prod</id>
                                 <goals>
