--- a/common/pom.xml
+++ b/common/pom.xml
@@ -77,6 +77,13 @@
             <version>1.4.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.10.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
